--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Redundant archives
+build.rar
+src.zip
+
+# Temporary test files
+testsprite_tests/
